Fix vertical overflow because item was centered

--- a/styles.scss
+++ b/styles.scss
@@ -100,6 +100,7 @@ body {
 }
 
 .content {
+	margin:auto;
 	margin-right: $desktop-safe-zone + 20.75vw;
 
 	position: relative;
